dipatch function utils in 2 files for norm

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -13,6 +13,7 @@ INC_DIR = include
 # Fichiers sources
 SRCS = $(SRC_DIR)/main.c \
 	   $(SRC_DIR)/utils/utils.c \
+	   $(SRC_DIR)/utils/utils_2.c \
 	   $(SRC_DIR)/parsing/check.c
 
 # Génération automatique des fichiers objets
@@ -44,11 +45,10 @@ $(NAME): $(OBJS)
 	@echo "$(YELLOW)$(BUILD_EMOJI)  Compilation en cours$(RESET)..."
 	@sleep 0.5
 	@$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
-	@echo "$(GREEN)$(SUCCESS_EMOJI) Compilation réussie : $(NAME)$(RESET)"
+	@echo "$(GREEN)$(SUCCESS_EMOJI) Compilation réussie: $(NAME)$(RESET)"
 
 # Compilation des fichiers objets
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(HEADERS)
-	@echo "$(YELLOW)$(BUILD_EMOJI)  Compilation : $<$(RESET)"
 	@mkdir -p $(@D) # Crée les sous-répertoires dans obj si nécessaire
 	@$(CC) $(CFLAGS) -I$(INC_DIR) -c $< -o $@
 
