--- a/philo/Makefile
+++ b/philo/Makefile
@@ -12,12 +12,15 @@ OBJ_DIR = obj
 INC_DIR = include
 
 # Fichiers sources
-SRCS = $(SRC_DIR)/main.c \
-	   $(SRC_DIR)/utils/utils.c \
-	   $(SRC_DIR)/utils/utils_2.c \
-	   $(SRC_DIR)/parsing/overflow.c \
-	   $(SRC_DIR)/parsing/parsing.c \
-	   $(SRC_DIR)/parsing/valid_arg.c
+SRCS =	$(SRC_DIR)/main.c \
+		$(SRC_DIR)/utils/utils.c \
+		$(SRC_DIR)/utils/utils_2.c \
+		$(SRC_DIR)/parsing/overflow.c \
+		$(SRC_DIR)/parsing/parsing.c \
+		$(SRC_DIR)/parsing/valid_arg.c \
+		$(SRC_DIR)/philos/philos_gestion.c \
+		$(SRC_DIR)/sim/sim_init.c \
+		$(SRC_DIR)/memory/free.c
 
 # Génération automatique des fichiers objets
 OBJS = $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
